     repository types. This will enable faster missing revision discovery with
     bzr+ssh. (Robert Collins)

   * find_* methods available for BzrDirs, Branches and WorkingTrees.
     (Aaron Bentley)

   * Help topics can now be loaded from files. 
     (Ian Clatworthy, Alexander Belchenko)

   * get_parent_map now always provides tuples as its output.  (Aaron Bentley)

   * New method ``iter_inventories`` on Repository for access to many
     inventories. This is primarily used by the ``revision_trees`` method, as
     direct access to inventories is discouraged. (Robert Collins)

   * New method ``next_with_ghosts`` on the Graph breadth-first-search objects
     which will split out ghosts and present parents into two separate sets,
     useful for code which needs to be aware of ghosts (e.g. fetching data
     cares about ghosts during revision selection). (Robert Collins)

   * Parent Providers should now implement ``get_parent_map`` returning a
     dictionary instead of ``get_parents`` returning a list.
     ``Graph.get_parents`` is now deprecated. (John Arbash Meinel,
     Robert Collins)

   * Patience Diff now supports arbitrary python objects, as long as they
     support ``hash()``. (John Arbash Meinel)

   * Reduce selftest overhead to establish test names by memoization.
     (Vincent Ladeuil)

   * Repository has a new method ``has_revisions`` which signals the presence
     of many revisions by returning a set of the revisions listed which are
     present. This can be done by index queries without reading data for parent
     revision names etc. (Robert Collins)

  API BREAKS:

  TESTING:

   * Modules can now customise their tests by defining a ``load_tests``
     attribute. ``pydoc bzrlib.tests.TestUtil.TestLoader.loadTestsFromModule``
     for the documentation on this attribute. (Robert Collins)

   * New helper function ``bzrlib.tests.condition_id_re`` which helps
     filter tests based on a regular expression search on the tests id.